Fixing Align

--- a/style.css
+++ b/style.css
@@ -288,7 +288,7 @@
 
 .hero_section img {
   margin-top: 20px;
-  padding-left: 440px;
+  padding-left: 340px;
   padding-right: 6600px;
 }
 
